--- a/src/style.css
+++ b/src/style.css
@@ -28,7 +28,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  background-image: url("/src/assets/header-beach-bg.jpg");
+  background-image: url("/assets/header-beach-bg.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -36,15 +36,15 @@ body {
   height: 76rem;
 }
 
-.header__container {
-  z-index: 10;
+.header__nav {
   display: flex;
-  align-items: center;
   gap: 2rem;
-  padding: 2rem;
+  list-style-type: none;
+  margin-top: 4rem;
 }
 
 .header__link {
+  display: inline-block;
   position: relative;
   text-transform: uppercase;
   text-decoration: none;
@@ -323,6 +323,14 @@ body {
     height: 64rem;
   }
 
+  .header__nav {
+    gap: 1rem;
+  }
+
+  .header__link {
+    padding: 1rem 2rem;
+  }
+
   .header__title {
     font-size: 6rem;
     letter-spacing: 12px;
@@ -339,14 +347,6 @@ body {
 }
 
 @media (max-width: 500px) {
-  .header__container {
-    gap: 1rem;
-  }
-
-  .header__link {
-    padding: 1rem 2rem;
-  }
-
   .header__title {
     top: 24rem;
     font-size: 4rem;
