--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -12,6 +12,7 @@
 
   <link rel="stylesheet" href="/style.css">
   <title>{{ title }}</title>
+  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
 
 <body>
@@ -25,6 +26,18 @@
   </main>
 
   {% include 'footer.njk' %}
+
+  <script>
+    if (window.netlifyIdentity) {
+      window.netlifyIdentity.on("init", user => {
+        if (!user) {
+          window.netlifyIdentity.on("login", () => {
+            document.location.href = "/admin/";
+          });
+        }
+      });
+    }
+  </script>
 
 </body>
 
