--- a/src/_includes/article-snippet.njk
+++ b/src/_includes/article-snippet.njk
@@ -5,7 +5,8 @@
       <h3 class="article__title"><a href="{{ post.url }}">{{ post.data.title }}</a></h3>
       <p class="article__date">{{ post.data.date | postDate }}</p>
       <p class="article__snippet">{{ post.data.description }}</p>
-      <a class="btn" href="{{ post.url }}">Continue Reading</a>
+      <a class="btn" aria-label="continue reading about {{ post.data.title }}" href="{{ post.url }}">Continue
+        Reading</a>
     </div>
   </article>
 </li>
