--- a/src/_includes/article-snippet.njk
+++ b/src/_includes/article-snippet.njk
@@ -1,6 +1,8 @@
 <li class="featured__item">
   <article class="article">
-    <img class="article__img" src="{{post.data.image}}" alt="{{post.data.imageAlt}}">
+    <div class="article__img-container">
+      <img class="article__img" src="{{post.data.image}}" alt="{{post.data.imageAlt}}">
+    </div>
     <div class="article__body">
       <h3 class="article__title"><a href="{{ post.url }}">{{ post.data.title }}</a></h3>
       <p class="article__date">{{ post.data.date | postDate }}</p>
