--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -1,6 +1,8 @@
 <footer class="footer">
-  <p class="copyright">
-    All rights reserved &copy; <span class="year">2024</span>
-    <strong>Ekaterina Furman</strong>
-  </p>
+  <div class="container">
+    <p class="copyright">
+      All rights reserved &copy; <span class="year">2024</span>
+      <strong>Ekaterina Furman</strong>
+    </p>
+  </div>
 </footer>
