--- a/src/_includes/article-snippet.njk
+++ b/src/_includes/article-snippet.njk
@@ -1,12 +1,12 @@
-<li class="featured__item">
-  <article class="article">
-    <div class="article__img-container">
-      <img class="article__img" src="{{post.data.image}}" alt="{{post.data.imageAlt}}">
+<li class="list__item">
+  <article class="snippet">
+    <div class="snippet__img-container">
+      <img class="snippet__img" src="{{post.data.image}}" alt="{{post.data.imageAlt}}">
     </div>
-    <div class="article__body">
-      <h3 class="article__title"><a href="{{ post.url }}">{{ post.data.title }}</a></h3>
-      <p class="article__date">{{ post.data.date | postDate }}</p>
-      <p class="article__snippet">{{ post.data.description }}</p>
+    <div class="snippet__body">
+      <h3 class="snippet__title"><a href="{{ post.url }}">{{ post.data.title }}</a></h3>
+      <p class="snippet__date">{{ post.data.date | postDate }}</p>
+      <p class="snippet__description">{{ post.data.description }}</p>
       <a class="btn" aria-label="continue reading about {{ post.data.title }}" href="{{ post.url }}">Continue
         Reading</a>
     </div>
