--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -1,27 +1,34 @@
+<nav class="nav">
+  <div class="container">
+    <div class="nav__container">
+      <a href="https://luxscintilla.com/" aria-label="image link to portfolio home">
+        <img class="nav__logo" src="/assets/blog-logo-dark.png" alt="luxscintilla logo">
+      </a>
+
+      <ul class="nav__list">
+        <li class="nav__item">
+          <a class="nav__link" href="https://luxscintilla.com/">Home</a>
+        </li>
+        <li class="nav__item">
+          <a class="nav__link" href="/">Featured</a>
+        </li>
+        <li class="nav__item">
+          <a class="nav__link" href="/blog/">All Posts</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
 <header class="header">
-  <ul class="header__nav">
-    <li>
-      <a class="header__link" href="/">Featured</a>
-    </li>
-    <li>
-      <a class="header__link" href="https://luxscintilla.com/">Home</a>
-    </li>
-    <li>
-      <a class="header__link" href="/blog/">All Posts</a>
-    </li>
-  </ul>
-  <h1 class="header__title">LUXSCINTILLA</h1>
-  <div class="header__box">
-    <div class="quote">
-      <p class="quote__text">“The expert in anything was once a beginner.”</p>
-      <p class="quote__name">― Helen Hayes</p>
+  <div class="container">
+
+    <div class="hero">
+      <div class="hero__body">
+        <h2 class="hero__title">Let's make it happen</h2>
+        <p class="hero__text">Keep learning, keep building, keep exploring!</p>
+      </div>
     </div>
 
-    <div class="cto">
-      <p class="cto__text">My blog posts focus on HTML, CSS, and JavaScript knowledge that is often reported to be asked
-        on interviews, I myself have searched high and low to pinpoint the topics of interest and gather as many as I
-        can in one place.</p>
-      <img class="cto__icon" src="/assets/arrow-down.png" alt="arrow down">
-    </div>
   </div>
 </header>
